samples/_failures_safe/1761624949_f016ed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2b27c9c6.c: In function ‘main’:
./samples/SAFE/__tmp_2b27c9c6.c:150:12: error: missing terminating " character
  150 |     printf("Enter input
      |            ^~~~~~~~~~~~
./samples/SAFE/__tmp_2b27c9c6.c:150:5: error: expected expression at end of input
  150 |     printf("Enter input
      |     ^~~~~~
./samples/SAFE/__tmp_2b27c9c6.c:150:5: error: expected declaration or statement at end of input
